[gd_scene load_steps=42 format=3 uid="uid://bryuyj06lbaxi"]

[ext_resource type="Script" path="res://Enemies/enemy_general.gd" id="1_6jqsp"]
[ext_resource type="PackedScene" uid="uid://dd7i7iamvfsq5" path="res://Collectibles/collectibleOrange.tscn" id="2_81sh3"]
[ext_resource type="Texture2D" uid="uid://dg6jtka113eq1" path="res://Assets/Graphics/sprites/sprites_enemies.png" id="2_clbgl"]
[ext_resource type="AudioStream" uid="uid://1ghx8flvsx4o" path="res://Assets/Sounds/sfx/pig_damage.wav" id="3_xhyew"]
[ext_resource type="AudioStream" uid="uid://dlxotk6tqrgv4" path="res://Assets/Sounds/sfx/pig_death.wav" id="4_cf3m1"]
[ext_resource type="AudioStream" uid="uid://c6esa6bpc6d6r" path="res://Assets/Sounds/sfx/effect_jump.wav" id="6_bhm1v"]
[ext_resource type="AudioStream" uid="uid://cy2j1txps8t0w" path="res://Assets/Sounds/sfx/chicken_death.wav" id="7_ah2gu"]
[ext_resource type="Material" uid="uid://b5ws7ks5frcgv" path="res://Collectibles/bonus_material.tres" id="8_xhxqd"]
[ext_resource type="Theme" uid="uid://csdwsl3byrm40" path="res://Themes/collectedScore_theme.tres" id="9_w1122"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kt5p"]
size = Vector2(64, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2rf2"]
atlas = ExtResource("2_clbgl")
region = Rect2(666, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7udx"]
atlas = ExtResource("2_clbgl")
region = Rect2(740, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6ssn"]
atlas = ExtResource("2_clbgl")
region = Rect2(814, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5oln"]
atlas = ExtResource("2_clbgl")
region = Rect2(74, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqy6g"]
atlas = ExtResource("2_clbgl")
region = Rect2(518, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_54nfh"]
atlas = ExtResource("2_clbgl")
region = Rect2(592, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmg6k"]
atlas = ExtResource("2_clbgl")
region = Rect2(888, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctobc"]
atlas = ExtResource("2_clbgl")
region = Rect2(962, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3tx1"]
atlas = ExtResource("2_clbgl")
region = Rect2(1036, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kf2kt"]
atlas = ExtResource("2_clbgl")
region = Rect2(1110, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufp17"]
atlas = ExtResource("2_clbgl")
region = Rect2(1036, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3o8j"]
atlas = ExtResource("2_clbgl")
region = Rect2(1110, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4h6e"]
atlas = ExtResource("2_clbgl")
region = Rect2(1184, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_st5mm"]
atlas = ExtResource("2_clbgl")
region = Rect2(1258, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2xoa"]
atlas = ExtResource("2_clbgl")
region = Rect2(518, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfirs"]
atlas = ExtResource("2_clbgl")
region = Rect2(444, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_etdvx"]
atlas = ExtResource("2_clbgl")
region = Rect2(962, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xhmy"]
atlas = ExtResource("2_clbgl")
region = Rect2(1184, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2yoe"]
atlas = ExtResource("2_clbgl")
region = Rect2(1258, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmphd"]
atlas = ExtResource("2_clbgl")
region = Rect2(0, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej2te"]
atlas = ExtResource("2_clbgl")
region = Rect2(74, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofgd6"]
atlas = ExtResource("2_clbgl")
region = Rect2(148, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xm5h"]
atlas = ExtResource("2_clbgl")
region = Rect2(222, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6fvr"]
atlas = ExtResource("2_clbgl")
region = Rect2(296, 17, 74, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_86jam"]
atlas = ExtResource("2_clbgl")
region = Rect2(370, 17, 74, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_5cx1g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2rf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7udx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6ssn")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5oln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqy6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54nfh")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmg6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctobc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3tx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kf2kt")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufp17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3o8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4h6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st5mm")
}],
"loop": false,
"name": &"dead",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2xoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfirs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etdvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xhmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2yoe")
}],
"loop": false,
"name": &"flying",
"speed": 10.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_hmphd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej2te")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2xoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfirs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etdvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xhmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2yoe")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofgd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xm5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6fvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86jam")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4klqh"]
size = Vector2(32, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2h4lu"]
size = Vector2(640, 56)

[sub_resource type="Animation" id="Animation_u6l55"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-220, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-80, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.001)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%collectedDisplay:material:shader_parameter/strength")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("%collectedDisplay:theme_override_font_sizes/font_size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_gitew"]
resource_name = "score_value"
length = 3.0
step = 0.05
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-220, -0.25, 0, 0.25, 0, -220, -0.25, 0, 0.25, 0, -220, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.75, 3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-80, -0.25, 0, 0.25, 0, -80, -0.25, 0, 1.5, 0, -240, 0, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.75, 3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 0.75, 3)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:g")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 0.75, 3)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate:b")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 0.75, 3)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate:a")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 0.75, 3)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%collectedDisplay:theme_override_font_sizes/font_size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0, 24, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ihjei"]
_data = {
"RESET": SubResource("Animation_u6l55"),
"score_value": SubResource("Animation_gitew")
}

[node name="enemyBase" type="CharacterBody2D" groups=["Persist", "enemies"]]
z_index = 1
texture_filter = 1
collision_layer = 0
floor_max_angle = 1.0472
floor_snap_length = 15.0
script = ExtResource("1_6jqsp")
movementType = "followPlayerX"
onDeath_spawnObject = true
onDeath_spawnObject_objectPath = ExtResource("2_81sh3")
onDeath_spawnObject_objectAmount = 20
onDeath_spawnObject_throwAround = true
generalTimer1_randomize_cooldown = true
generalTimer2_randomize_cooldown = true
generalTimer3_randomize_cooldown = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7kt5p")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 10)
sprite_frames = SubResource("SpriteFrames_5cx1g")
animation = &"jump"

[node name="AttackingTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="AttackedTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="DeadTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["enemies"]]
light_mask = 2
visibility_layer = 2
collision_layer = 6
collision_mask = 2
input_pickable = false
monitoring = false
monitorable = false

[node name="main_collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_4klqh")

[node name="Limit_turn" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
one_shot = true

[node name="patrolDirectionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
autostart = true

[node name="followDelay" type="Timer" parent="patrolDirectionTimer"]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="jumpTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
autostart = true

[node name="flyCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 12.0
one_shot = true

[node name="flyEnd" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 8.0
one_shot = true

[node name="particle_limiter" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xhyew")

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cf3m1")
volume_db = 5.0

[node name="shootProjectile" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_bhm1v")

[node name="dropProjectile" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ah2gu")

[node name="idle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ah2gu")
volume_db = -5.0
pitch_scale = 1.25

[node name="shoot_delay" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="drop_delay" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(1, 1, 1, 0.0980392)
rect = Rect2(-500, -500, 1000, 1000)

[node name="debug_label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "test"

[node name="scanForPlayer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="scanForPlayer_CollisionShape2D" type="CollisionShape2D" parent="scanForPlayer"]
unique_name_in_owner = true
position = Vector2(320, 16)
shape = SubResource("RectangleShape2D_2h4lu")

[node name="ColorRect" type="ColorRect" parent="scanForPlayer/scanForPlayer_CollisionShape2D"]
visible = false
modulate = Color(1, 0, 0, 0.345098)
offset_left = -320.0
offset_top = -4.0
offset_right = 320.0
offset_bottom = 4.0

[node name="scanForLedge" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(32, 0)
target_position = Vector2(0, 112)

[node name="ColorRect" type="ColorRect" parent="scanForLedge"]
visible = false
modulate = Color(1, 0, 0, 0.345098)
offset_right = 4.0
offset_bottom = 112.0

[node name="timerGeneral1" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="timerGeneral2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="timerGeneral3" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="timerGeneral4" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="timerGeneral5" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="timerGeneral6" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="collectedDisplayAnimAnchor" type="ColorRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
offset_left = -220.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = 80.0
color = Color(1, 1, 1, 0)

[node name="collectedDisplay" type="Label" parent="collectedDisplayAnimAnchor"]
unique_name_in_owner = true
z_index = 25
material = ExtResource("8_xhxqd")
layout_mode = 0
offset_right = 440.0
offset_bottom = 160.0
theme = ExtResource("9_w1122")
theme_override_font_sizes/font_size = 0
text = "test"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="collectedDisplayAnimAnchor"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_ihjei")
}

[connection signal="timeout" from="AnimatedSprite2D/AttackingTimer" to="." method="_on_attacking_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/AttackedTimer" to="." method="_on_attacked_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/DeadTimer" to="." method="_on_dead_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Limit_turn" to="." method="_on_limit_turn_timeout"]
[connection signal="timeout" from="patrolDirectionTimer" to="." method="_on_patrol_direction_timer_timeout"]
[connection signal="timeout" from="patrolDirectionTimer/followDelay" to="." method="_on_follow_delay_timeout"]
[connection signal="timeout" from="jumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="flyCooldown" to="." method="_on_fly_cooldown_timeout"]
[connection signal="timeout" from="flyEnd" to="." method="_on_fly_end_timeout"]
[connection signal="timeout" from="particle_limiter" to="." method="_on_particle_limiter_timeout"]
[connection signal="timeout" from="shoot_delay" to="." method="_on_shoot_delay_timeout"]
[connection signal="timeout" from="drop_delay" to="." method="_on_drop_delay_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="offScreen_load"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="offScreen_unload"]
[connection signal="area_entered" from="scanForPlayer" to="." method="_on_scan_for_player_area_entered"]
[connection signal="area_exited" from="scanForPlayer" to="." method="_on_scan_for_player_area_exited"]
[connection signal="timeout" from="timerGeneral1" to="." method="_on_timer_general_1_timeout"]
[connection signal="timeout" from="timerGeneral2" to="." method="_on_timer_general_2_timeout"]
[connection signal="timeout" from="timerGeneral3" to="." method="_on_timer_general_3_timeout"]
[connection signal="timeout" from="timerGeneral4" to="." method="_on_timer_general_4_timeout"]
[connection signal="timeout" from="timerGeneral5" to="." method="_on_timer_general_5_timeout"]
[connection signal="timeout" from="timerGeneral6" to="." method="_on_timer_general_6_timeout"]
